--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <div class="card sedans">
-      <img src="images/icon-sedans.svg">
+      <img src="images/icon-sedans.svg" alt="sedans car">
       <h1>SEDANS</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
       or on your next road trip.</p>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="card suv">
-      <img src="images/icon-suvs.svg">
+      <img src="images/icon-suvs.svg" alt="suv car">
       <h1>SUVs</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
       and off-road adventures.</p>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="card luxury">
-      <img src="images/icon-luxury.svg">
+      <img src="images/icon-luxury.svg" alt="luxury car">
       <h1>LUXURY</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
       rental and arrive in style.</p>
@@ -37,8 +37,8 @@
     </div>
   </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Camille Breillot</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Camille Breillot</a>.</p>
   </div>
 
 
